playlist, playlistform scss 수정

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -22,6 +22,10 @@ body {
       margin: auto;
       display: flex;
       height: 100%;
+      .App-logo {
+        width: 120px;
+        height: 65px;
+      }
     }
   }
   .App-container {
