--- a/src/components/PlatListForm.scss
+++ b/src/components/PlatListForm.scss
@@ -41,20 +41,23 @@
     }
     .PlayListForm-button {
     }
-    .PlayListForm-submit-button {
-      position: absolute;
-      right: 50px;
-      top: 190px;
-      padding: 11px 30px;
-      border: none;
-      color: #000;
-      font-weight: 600px;
-      font-size: 17px;
-      cursor: pointer;
-      background-color: transparent;
-      border-radius: 0 10px 0 10px;
-      color: #fff;
-      background-color: #000;
+    .PlayListForm-ratingbutton {
+      display: flex;
+      justify-content: space-between;
+      .PlayListForm-submit-button {
+        padding: 0 30px;
+        margin: 25px 40px 0 0;
+        height: 55px;
+        border: none;
+        color: #000;
+        font-weight: 600px;
+        font-size: 17px;
+        cursor: pointer;
+        background-color: transparent;
+        border-radius: 0 10px 0 10px;
+        color: #fff;
+        background-color: #000;
+      }
     }
   }
 }
